--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -20,6 +20,15 @@
 
 
 @layer utilities {
+
+  input:-webkit-autofill {
+    -webkit-box-shadow: inset 0 0 0 50px #f9f9f9 !important; /* цвет фона, например белый */
+    -webkit-text-fill-color: #000 !important; /* цвет текста */
+    -webkit-transition: background-color 5000s ease-in-out 0s;
+    transition: background-color 5000s ease-in-out 0s;
+    font-size: 1rem !important;
+  }
+
   .scrollbar-custom::-webkit-scrollbar {
     width: 4px;
     height: 4px;
