--- a/public/assets/css/style3.css
+++ b/public/assets/css/style3.css
@@ -5674,3 +5674,7 @@ input[type="search"]::-webkit-search-cancel-button {
 	max-width: 918px;
 	gap: 40px;
 }
+
+.col-span-1 .accordion-arrow::after{
+	opacity: 0;
+}
