--- a/public/assets/css/style3.css
+++ b/public/assets/css/style3.css
@@ -2712,6 +2712,7 @@ body::-webkit-scrollbar-thumb {
 }
 .classes {
     padding: 50px 0;
+		background: #fff;
 }
 .classes .container .classes__title {
     margin-bottom: 40px;
@@ -5746,4 +5747,7 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 .sign-in-res{
 	color: #000 !important;
+}
+.profile-wrap{
+	background: #F9F9F9;
 }
