--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3352,7 +3352,7 @@ textarea {
 }
 
 .home_discover {
-  background-image: url(../img/home_discover.png);
+  /* background-image: url(../img/home_discover.png); */
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
