--- a/public/assets/css/style3.css
+++ b/public/assets/css/style3.css
@@ -718,6 +718,99 @@ body::-webkit-scrollbar-thumb {
     filter: brightness(0) invert(1);
 }
 
+.profile-dropdown {
+    position: relative;
+}
+.profile-dropdown__menu {
+    position: absolute;
+    top: calc(100% + 12px);
+    left: 0;
+    min-width: 240px;
+    padding: 12px;
+    background-color: #fff;
+    border-radius: 16px;
+    -webkit-box-shadow: 0px 25px 50px rgba(24, 24, 27, 0.12);
+    box-shadow: 0px 25px 50px rgba(24, 24, 27, 0.12);
+    border: 1px solid rgba(72, 65, 52, 0.08);
+    display: none;
+    z-index: 200;
+}
+.profile-dropdown__menu::before {
+    content: "";
+    position: absolute;
+    top: -12px;
+    left: 0;
+    width: 100%;
+    height: 12px;
+}
+.profile-dropdown:hover .profile-dropdown__menu,
+.profile-dropdown:focus-within .profile-dropdown__menu {
+    display: block;
+}
+.profile-dropdown__menu ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    gap: 10px;
+}
+.profile-dropdown__menu li {
+    width: 100%;
+}
+.profile-dropdown__menu a {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    gap: 10px;
+    padding: 10px;
+    border-radius: 8px;
+    background-color: #fff;
+    color: #a4a0a0;
+    font-size: 14px;
+    font-weight: 400;
+    text-decoration: none;
+    -webkit-transition: background-color 0.2s ease, color 0.2s ease;
+    transition: background-color 0.2s ease, color 0.2s ease;
+}
+.profile-dropdown__menu a svg {
+    width: 18px;
+    height: 18px;
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+}
+.profile-dropdown__menu a svg path,
+.profile-dropdown__menu a svg circle,
+.profile-dropdown__menu a svg rect,
+.profile-dropdown__menu a svg line,
+.profile-dropdown__menu a svg polyline,
+.profile-dropdown__menu a svg polygon {
+    /* stroke: currentColor; */
+}
+.profile-dropdown__menu a svg path[fill]:not([fill="none"]) {
+    fill: currentColor;
+}
+.profile-dropdown__menu a:hover,
+.profile-dropdown__menu a:focus {
+    background-color: #fc7361;
+    color: #fff;
+}
+.profile-dropdown__divider {
+    height: 1px;
+    width: 100%;
+    background-color: rgba(72, 65, 52, 0.1);
+    margin: 6px 0;
+}
+
 @media (max-width: 1200px) {
     .header__search form input {
         padding-left: 0;
