за время пока сайт лежал 09.11.25

--- a/public/assets/css/style3.css
+++ b/public/assets/css/style3.css
@@ -5844,3 +5844,6 @@ input[type="search"]::-webkit-search-cancel-button {
 .profile-wrap{
 	background: #F9F9F9;
 }
+.trending_cards .swiper-slide{
+	height: 360px;
+}
